Wider columns to prevent long label wrapping, smaller text for 1st level elements (not sections), information about what the asterisk indicates (mouse over with title).

--- a/static/stylesheets/datacite_xml.css
+++ b/static/stylesheets/datacite_xml.css
@@ -25,7 +25,7 @@
 	.addButton {
 		float:right;
 		width: 30px;
-		margin-right: 130px;
+		margin-right: 80px;
 	}
 	
 	.rmvButton {
@@ -43,7 +43,7 @@
 		display: box;
 		float: left;
 		clear: left;
-		width: 150px;
+		width: 200px;
 		margin-top:3px;
 	}
 	
@@ -59,8 +59,12 @@
 		display: box;
 		float: left;
 		clear: left;
-		width: 150px;
+		width: 200px;
 		margin: 4px 8px 4px 2px;
+	}
+	
+	label.smallertext {
+		font-size: 10pt;
 	}
 	
 	input.sized1, div.sized1, select.sized1 {
